Bindings/NIFToolset.Native/NIF.Native.Mesh.h

typedef struct NIF_DataStreamRegion
{
	unsigned int startIndex;
	unsigned int range;
} NIF_DataStreamRegion;
typedef struct NIF_DataStreamElementDesc
{
	int format;
	unsigned int offset;
	unsigned int sizeInBytes;
	unsigned int componentCount;
	unsigned int componentSize;
	int type;
	int isNormalized;
	int isPacked;
} NIF_DataStreamElementDesc;
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_DataStreamRef_GetElementDescCount(NIF_DataStreamRefHandle streamRef);
NIFTOOLSET_NATIVE_ENTRY int NIF_DataStreamRef_GetElementDesc(NIF_DataStreamRefHandle streamRef, unsigned int index, NIF_DataStreamElementDesc* outElementDesc);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_DataStreamRef_GetSemanticName(NIF_DataStreamRefHandle streamRef, unsigned int index);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_DataStreamRef_GetSemanticIndex(NIF_DataStreamRefHandle streamRef, unsigned int index);
NIFTOOLSET_NATIVE_ENTRY int NIF_DataStreamRef_IsPerInstance(NIF_DataStreamRefHandle streamRef);
NIFTOOLSET_NATIVE_ENTRY void NIF_DataStreamRef_SetPerInstance(NIF_DataStreamRefHandle streamRef, int perInstance);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_DataStreamRef_GetSubmeshRegionIndex(NIF_DataStreamRefHandle streamRef, unsigned int submeshIndex);
NIFTOOLSET_NATIVE_ENTRY NIF_DataStreamRegion NIF_DataStreamRef_GetRegionForSubmesh(NIF_DataStreamRefHandle streamRef, unsigned int submeshIndex);
NIFTOOLSET_NATIVE_ENTRY void NIF_DataStreamRef_BindRegionToSubmesh(NIF_DataStreamRefHandle streamRef, unsigned int submeshIndex, unsigned int regionIndex);
NIFTOOLSET_NATIVE_ENTRY void NIF_DataStreamRef_SetActiveCount(NIF_DataStreamRefHandle streamRef, unsigned int submeshIndex, unsigned int count);