Bindings/NIFToolset.Managed/NativeMethods.cs

    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetElementDescCount(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStreamRef_GetElementDesc(SafeDataStreamRefHandle streamRef, uint index, NifDataStreamElementDesc* outElementDesc);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_DataStreamRef_GetSemanticName(SafeDataStreamRefHandle streamRef, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetSemanticIndex(SafeDataStreamRefHandle streamRef, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStreamRef_IsPerInstance(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStreamRef_SetPerInstance(SafeDataStreamRefHandle streamRef, int perInstance);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetSubmeshRegionIndex(SafeDataStreamRefHandle streamRef, uint submeshIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern NifDataStreamRegion NIF_DataStreamRef_GetRegionForSubmesh(SafeDataStreamRefHandle streamRef, uint submeshIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStreamRef_BindRegionToSubmesh(SafeDataStreamRefHandle streamRef, uint submeshIndex, uint regionIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStreamRef_SetActiveCount(SafeDataStreamRefHandle streamRef, uint submeshIndex, uint count);
    #endregion
